--- a/addannouncement.html
+++ b/addannouncement.html
@@ -70,6 +70,23 @@
     <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-database.js"></script>
 
-    <script type="module" src="addannouncement.js"></script>
+    <!-- Firebase configuration -->
+    <script>
+        var firebaseConfig = {
+            apiKey: "AIzaSyA4SI2yXymjL4cwtVvKtCxGTQOeMvU968w",
+            authDomain: "l-kolehiyo-capstone.firebaseapp.com",
+            databaseURL: "https://l-kolehiyo-capstone-default-rtdb.firebaseio.com",
+            projectId: "l-kolehiyo-capstone",
+            storageBucket: "l-kolehiyo-capstone.appspot.com",
+            messagingSenderId: "1032233320347",
+            appId: "1:1032233320347:web:109c19d37aec6d0364eb3e",
+            measurementId: "G-D5R84EF8KY"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+    </script>
+
+    <!-- Your JavaScript code -->
+    <script src="addannouncement.js"></script>
 </body>
 </html>
