--- a/announcements.html
+++ b/announcements.html
@@ -104,6 +104,9 @@
                 announcementTableBody.innerHTML += row;
             }
         });
+
+        
     </script>
+    <script type="module" src="announcements.js"></script>
 </body>
 </html>
